# TFG

./: .cspell.json  .envrc  .gitignore  .pre-commit-config.yaml  :w  Planificación y riesgo.md  README.md  Set-Up Steps.md  devenv.nix  flake.nix  prek.toml  project-words.txt  rust-toolchain.toml
.github/workflows/: format.yml  spell.yml  test.yml
2-stateful-blinky/: Cargo.toml
2-stateful-blinky/.cargo/: config.toml
2-stateful-blinky/src/: blinky.rs  button.rs  hardware.rs  main.rs
3-native-tests/: Cargo.toml  README.md
3-native-tests/adder/: Cargo.toml
3-native-tests/adder-cmsis/: Cargo.toml
3-native-tests/adder-cmsis/src/: lib.rs
3-native-tests/adder-interface/: Cargo.toml
3-native-tests/adder-interface/src/: lib.rs
3-native-tests/adder/.cargo/: config.toml
3-native-tests/adder/src/: lib.rs
3-native-tests/entry/: Cargo.toml
3-native-tests/src/: main.rs
experiments/1-setup-from-scratch/src/: main.rs
experiments/2-stateful-blinky/: Cargo.toml  Embed.toml
experiments/2-stateful-blinky/src/: button.rs  hardware.rs  main.rs
experiments/3-native-tests/: Cargo.toml
experiments/3-native-tests/adder-cmsis/: Cargo.toml
experiments/3-native-tests/adder-interface/: Cargo.toml
experiments/3-native-tests/adder-rust/: Cargo.toml
experiments/3-native-tests/adder-rust/src/: lib.rs
experiments/3-native-tests/entry/src/: main.rs
experiments/4-usb-audio/: Cargo.toml
experiments/4-usb-audio/.cargo/: config.toml
experiments/4-usb-audio/src/: main.rs
experiments/5-rotary-encoder/: Cargo.toml
experiments/5-rotary-encoder/src/: encoder_task.rs  hardware.rs  main.rs
setup-from-scratch/: Cargo.toml
setup-from-scratch/.cargo/: config.toml
sparklet/: Cargo.toml  justfile
sparklet/cmsis-interface/: Cargo.toml
sparklet/cmsis-interface/src/: lib.rs
sparklet/cmsis-native/: Cargo.toml
sparklet/cmsis-native/.cargo/: config.toml
sparklet/cmsis-native/src/: lib.rs
sparklet/cmsis-rust/: Cargo.toml
sparklet/cmsis-rust/src/: lib.rs
sparklet/config/: Cargo.toml
sparklet/config/src/: lib.rs  test.rs
sparklet/midi/: Cargo.toml
sparklet/midi/src/: lib.rs  test.rs
sparklet/runner/: Cargo.toml  Config.example.toml  build.rs  justfile  run-with-flags.sh
sparklet/runner/.cargo/: config.toml
sparklet/runner/src/: config.rs  config_task.rs  hardware.rs  hardware_abstractions.rs  input_task.rs  main.rs  midi_task.rs  synth_engine_task.rs  usb.rs
sparklet/runner/src/audio_task/: audio_usb.rs  mod.rs
sparklet/runner/src/audio_task/audio_usb/: hardware.rs  mod.rs
sparklet/runner/src/config/: mod.rs  task.rs
sparklet/runner/src/hardware/: input_hardware.rs  input_task.rs  mod.rs
sparklet/runner/src/hardware/audio_usb/: stm32h723zg.rs
sparklet/runner/src/hardware/config/: stm32h723zg.rs
sparklet/runner/src/hardware/midi_din/: mod.rs  stm32h723zg.rs
sparklet/runner/src/hardware/midi_usb/: stm32h723zg.rs
sparklet/runner/src/midi_task/: midi_din.rs  midi_usb.rs  mod.rs
sparklet/runner/src/midi_task/midi_din/: hardware.rs  mod.rs
sparklet/runner/src/midi_task/midi_usb/: hardware.rs  mod.rs
sparklet/synth-engine/: Cargo.toml  render_all.sh
sparklet/synth-engine/examples/: config_oscillation.rs  midi_render.rs  octave_filter_frequency_response.rs
sparklet/synth-engine/src/: db_linear_amplitude_table.rs  lib.rs  test.rs  wavetable.rs
sparklet/synth-engine/src/adsr/: config_table.rs  db_linear_amplitude_table.rs  mod.rs  native_utils.rs  sustain_amplitude_table.rs
sparklet/synth-engine/src/capacitor/: mod.rs
sparklet/synth-engine/src/generator/: mod.rs  test.rs
sparklet/synth-engine/src/octave_filter/: filter_coefficients.rs  mod.rs
sparklet/synth-engine/src/voice_bank/: mod.rs  test.rs
sparklet/synth-engine/src/wavetable/: mod.rs  phase_increment_table.rs  saw_wavetable.rs  sine_wavetable.rs  square_wavetable.rs  tests.rs  triangle_wavetable.rs
sparklet/synth-engine/tests/: octave_filter_tests.rs
sparklet/table_generators/: Cargo.toml
sparklet/table_generators/src/: adsr_utils.rs  lib.rs
thesis/: bibliografia.bib  bibliografía.bib  justfile  main.typ  project-words.txt
thesis/code/: Config.toml  html_example.html  java_example.java  javascript_example.js  voice_steal_algorithm.rs
thesis/figures/: adsr.typ  wavetable.typ
thesis/scripts/: adsr_diagrams.py  filter_bank_diagrams.py  styles_config.py
thesis/sections/: 01_Introducción.typ  01_introduccion.typ  01_introducción.typ  02_Gestion.typ  02_Planificación.typ  03_Análisis.typ  03_Metodología.typ  04_Análisis.typ  04_Diseño.typ  05_Diseño.typ  05_Implementacion.typ  06_Implementación.typ  06_Pruebas.typ  07_Manuales.typ  08_Conclusiones.typ  09_Anexos.typ  XX_Conclusiones.typ  ejemplos_borrame.typ  ejemplos_bórrame.typ
thesis/sections/06_implementación/: 06_00_Configuración.typ  06_01_Oscilador.typ  06_02_ADSR.typ  06_02_ASDR.typ  06_03_Banco_de_voces.typ  06_04_Generador.typ  06_05_Ecualización.typ  06_05_MIDI.typ  06_06_Ecualización.typ  06_06_Motor_de_síntesis.typ  06_07_Configuración.typ  06_07_Motor_de_síntesis.typ  06_08_Configuración.typ  06_08_Ejecutor.typ  06_09_Ejecutor.typ  06_09_MIDI.typ  06_10_CMSIS.typ  06_10_USB.typ  06_11_CMSIS.typ  06_11_MIDI_UART.typ  06_11_Operaciones_DSP.typ  06_11_USB.typ  06_12_USB.typ
thesis/sections/09_anexos/: 09_01_derivación_matemática_ADSR.typ  09_01_derivación_matemática_ASDR.typ
thesis/tables/: tabla_ejemplo.typ  tabla_errores_cents.typ
thesis/utils/: requirements.typ
