[package]
name = "setup-from-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "rt"] }
