[package]
name = "native-tests-entry"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
adder-cmsis = { path = "../adder-cmsis" }
adder-interface = { path = "../adder-interface" }
