[workspace]
resolver = "3"
members = ["adder-interface", "adder-cmsis", "adder-rust", "entry"]

[patch.crates-io]
embassy-executor = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-stm32 = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-sync = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-time = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
