[package]
name = "stm32h7-usb-audio-microphone"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "defmt", "executor-thread", "executor-interrupt"] }
embassy-stm32 = { version = "0.4.0",  features = ["stm32h723zg", "defmt", "memory-x", "time-driver-any", "exti", "unstable-pac"] }
embassy-sync = { version = "0.7.2",  features = ["defmt"] }
embassy-time = { version = "0.5.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1",  features = ["defmt"] }
heapless = { version = "0.8", default-features = false }
micromath = "2.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
bytemuck = "1.24.0"
static_cell = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-stm32 = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-sync = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-time = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}
embassy-usb = { git = "https://github.com/miniluz/embassy.git", branch = "reference-9.1"}

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
