[package]
name = "cmsis-native"
version = "0.1.0"
edition = "2024"

[dependencies]
cmsis-interface = { path = "../cmsis-interface" }
embedded-test = { version = "0.7.0-alpha.3", features = ["defmt", "embassy" ] }
defmt = "1.0.1"
rtt-target = { version = "0.6.1", features = ["defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-stm32 = { version = "0.4.0", features = ["stm32h723zg", "defmt", "memory-x", "time", "time-driver-any", "exti"] }
bytemuck = { version = "1.21", default-features = false }

[dependencies.cmsis_dsp]
git = "https://github.com/miniluz/cmsis_dsp.rs"
branch = "feature/bit-shifts"
# path = "../../../cmsis_dsp.rs/"
features = ["cortex-m7", "double-precision-fpu", "micromath"]

[lib]
harness = false # Important: As we bring our own test harness for all tests

