[package]
name = "synth_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = "0.7.2"
fixed = "1.29.0"
defmt = "1.0.1"
heapless = "0.9.2"
midi = { path = "../midi" }
cmsis-interface = { path = "../cmsis-interface" }
config = { path = "../config" }

[dev-dependencies]
pretty_assertions = "1.4.1"
cmsis-rust = { path = "../cmsis-rust" }
midly = "0.5.3"
hound = "3.5"
clap = { version = "4.0", features = ["derive"] }
bytemuck = "1.20.0"
